fix: incorrect mapping into UserController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=DatingUserInfoService
 spring.datasource.url=jdbc:postgresql://localhost:5432/dating
 spring.datasource.username=postgres
 spring.datasource.password=1237894560
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC+3
