--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=DatingUserService
 spring.datasource.url={$SPRING_DATASOURCE_URL}
 spring.datasource.username={$SPRING_DATASOURCE_USERNAME}
 spring.datasource.password={$SPRING_DATASOURCE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC+3
